--- a/src/main/webapp/pages/CompanyMunicipalities/CompanyMunicipalities.html
+++ b/src/main/webapp/pages/CompanyMunicipalities/CompanyMunicipalities.html
@@ -35,14 +35,15 @@
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn9">
                                         <wm-livegrid formlayout="dialog" name="livegrid2">
                                             <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.VendorApprovalsData.dataSet" navigation="Classic" name="grid2_1" filtermode="multicolumn" exportformat="EXCEL" showrecordcount="true">
-                                                <wm-grid-column binding="municipalities.municipalityName" caption="Municipality" type="string" generator="assigned" edit-widget-type="text" show="true" related-entity-name="Municipalities" readonly="false"></wm-grid-column>
+                                                <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="100px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true" rowactionsposition="0"></wm-grid-column>
+                                                <wm-grid-column binding="municipalities.municipalityName" caption="Municipality" type="string" generator="assigned" edit-widget-type="text" show="true" related-entity-name="Municipalities"
+                                                readonly="false"></wm-grid-column>
                                                 <wm-grid-column binding="approvalStatus" caption="Review Status" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                                 <wm-grid-column binding="dateApproved" caption="Date Reviewed" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="timestamp" show="true"
                                                 filterwidget="date" readonly="false"></wm-grid-column>
                                                 <wm-grid-column binding="approvedBy" caption="Reviewed By" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                                 <wm-grid-column binding="expiresDate" caption="Expiration Date" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="timestamp" show="true"
                                                 filterwidget="date" readonly="false"></wm-grid-column>
-                                                <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
                                                 <wm-grid-action key="addNewRow" display-name="Add Municipality" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add Municipality" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
                                                 <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                                             </wm-grid>
