--- a/src/main/webapp/pages/dynamicFieldEditor/dynamicFieldEditor.html
+++ b/src/main/webapp/pages/dynamicFieldEditor/dynamicFieldEditor.html
@@ -1,6 +1,7 @@
 <wm-partial data-ng-controller="dynamicFieldEditorPageController" name="partial1">
     <wm-livegrid formlayout="dialog" name="livegrid3">
         <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.Cx2FormTypeFieldsData.dataSet" navigation="Classic" name="gridFields" filtermode="multicolumn" exportformat="EXCEL" showrecordcount="true">
+            <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="100px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true" rowactionsposition="0"></wm-grid-column>
             <wm-grid-column binding="displayOrder" caption="Display Order" type="integer" generator="assigned" edit-widget-type="number" show="true" readonly="false"></wm-grid-column>
             <wm-grid-column binding="label" caption="Label" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
             <wm-grid-column binding="formFieldTypes.label" caption="Field Type" type="string" primary-key="false" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="FormFieldTypes"></wm-grid-column>
@@ -10,7 +11,6 @@
             <wm-grid-column binding="defaultValue" caption="Default Value" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
             <wm-grid-column binding="helpText" caption="Help Text" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
             <wm-grid-column binding="possibleValues" caption="Possible Selections" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-            <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
             <wm-grid-action key="addNewRow" display-name="New Field" show="true" class="btn-primary" iconclass="wi wi-plus" title="New Field" action="Widgets.dlgFormTypeField.open()" shortcutkey="" disabled="false"></wm-grid-action>
             <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="updaterowAction($event)" disabled="false"></wm-grid-row-action>
             <wm-grid-row-action key="deleterow" display-name="" show="bind:Variables.Cx2FormTypeFieldsData.dataSet.data.length > 1" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="Widgets.dlgDeleteDynamicField.open()"
